@@ -2,15 +2,19 @@ package com.example.journey.service;
 
 import com.example.journey.auth.AuthService;
 import com.example.journey.dto.UserTripImagesDTO;
+import com.example.journey.model.TripImage;
 import com.example.journey.model.User;
 import com.example.journey.model.Trip;
 import com.example.journey.repository.TripImageRepository;
 import com.example.journey.repository.TripRepository;
 import com.example.journey.repository.UserRepository;
+import com.example.journey.repository.UserTripRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
+
+import java.util.List;
 
 @Service
 @AllArgsConstructor
@@ -19,6 +23,7 @@ public class UserService {
     private final AuthService authService;
     private final TripRepository tripRepository;
     private final TripImageRepository tripImageRepository;
+    private final UserTripRepository userTripRepository;
 
     public Mono<User> findById(Long id) {
         return userRepository.findById(id);
@@ -38,25 +43,22 @@ public class UserService {
 
     public Flux<UserTripImagesDTO> getUserPhotos() {
         return authService.getCurrentUser()
-                .flatMap(user -> {
-                    return tripRepository.findById(user.getId())
-                            .flatMap(trip -> {
-                                return mapTripToUserTripImagesDTO(trip)
-                            });
-                });
+                .flatMapMany(user -> {
+                    Flux<Trip> userOwnerTrips = tripRepository.findAllByIdOwner(user.getId());
+                    Flux<Trip> userTrips = userTripRepository.findAllByIdUser(user.getId())
+                            .flatMap(userTrip -> tripRepository.findById(userTrip.getIdTrip()));
+                    return Flux.merge(userOwnerTrips, userTrips);
+                })
+                .flatMap(this::mapTripToUserTripImagesDTO);
     }
 
     private Mono<UserTripImagesDTO> mapTripToUserTripImagesDTO(Trip trip) {
-        return tripImageRepository.findById(trip.getId())
+        return tripImageRepository.findAllByIdTrip(trip.getId())
                 .collectList()
-                .map(images -> {
-                    List<String> photoFilenames = images.stream()
-                            .map(TripImage::getFilename)
-                            .collect(Collectors.toList());
-                    UserTripImagesDTO dto = new UserTripImagesDTO();
-                    dto.setTripName(trip.getName());
-                    dto.setPhotos(photoFilenames);
-                    return dto;
+                .flatMap(tripImages -> {
+                    List<String> photos = tripImages.stream().map(TripImage::getFilename).toList();
+                    UserTripImagesDTO userTripImagesDTO = new UserTripImagesDTO(trip.getName(), trip.getId(), photos);
+                    return Mono.just(userTripImagesDTO);
                 });
     }
 }
